--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <li>Joe Palmer - <a href="https://twitter.com/Jet_Black" target="_blank">@Jet_Black</a>, <a href="http://www.irongalaxystudios.com" target="_blank">irongalaxystudios.com</a></li>
           <li>Joe Storm - <a href="https://twitter.com/JoeGStorm" target="_blank">@JoeGStorm</a></li>
           <li>John Davis - <a href="https://twitter.com/p0rk1ns" target="_blank">@p0rk1ns</a></li>
-          <li>Jorge Palacios - <a href="https://twitter.com/pctroll" target="_blank">@pctroll</a>, <a href="http://jorge.palacios.co" target="_blank">jorge.palacios.co</a></li>
+          <li>Jorge Palacios - <a href="https://twitter.com/pctroll" target="_blank">@pctroll</a>, <a href="http://jorge.palacios.rocks" target="_blank">jorge.palacios.co</a></li>
           <li>Joshua Parker - <a href="https://twitter.com/BossBlackDante" target="_blank">@BossBlackDante</a></li>
           <li>Justin Woodward - <a href="https://twitter.com/icjman" target="_blank">@icjman</a>, <a href="http://www.interabangent.com" target="_blank">interabangent.com</a></li>
           <li>Kidando - <a href="https://twitter.com/Kidando" target="_blank">@Kidando</a>, <a href="http://www.kidando.net" target="_blank">kidando.net</a></li>
